# audiobooks-digit-ecommerce-service-backend

./: .gitignore  README.md  pyproject.toml  test_smoke.py  需求说明.md  项目实战说明-掌柜小二.txt
atguigu/: main.py
atguigu/api/: app.py  dependencies.py  (+1 more)
audio-data/: .gitignore  README.md  pyproject.toml
audio-data/app/: __init__.py  dependencies.py  main.py  response.py  utils.py
audio-data/app/routers/: common.py  content.py  creator.py  interactions.py  library.py  playback.py  search.py  tickets.py  trade.py  users.py  wallet.py
audio-data/docker/: docker-compose.yaml
audio-data/generate/: __init__.py  config.py  insert_support.py  main.py  progress.py
audio-data/generate/layers/: base.py  common.py  layer1.py  layer2.py  layer3.py  layer4.py  layer5.py  layer6.py  seed_importer.py  validations.py
audio-data/seeds/1_foundation/: content_organization.csv  dim_audio_category.csv  dim_channel.csv  dim_content_tag.csv  dim_currency.csv  dim_language.csv
audio-data/seeds/2_content/: audio_album.csv  audio_track.csv  content_author.csv  content_narrator.csv
audio-data/seeds/4_trade/: vip_plan.csv
audio-data/seeds/6_operation/: content_topic.csv  content_topic_item.csv  ranking_item.csv  ranking_list.csv  recommend_item.csv  recommend_slot.csv
audio-data/sql/: audio.sql
audio-data/tests/: conftest.py  helpers.py  test_api_route_coverage.py  test_content_api.py  test_creator_api.py  test_db_integration.py  test_search_playback_library_api.py  test_trade_api.py  test_users_wallet_tickets_interactions_api.py
flow_config/: system_flows.yml  user_flows.yml
(+57 files in other folders)
